tests/snapshots/dictionary_tests__gets_default_dictionary_with_spaces_and_empty_lines.snap
---
source: tests/dictionary_tests.rs
expression: result

---
[
  {
    "word": "foo",
    "definitions": [
      "Lorem ipsum dolor sit amet, <i>dolor</i> sit igitur"
    ]
  },
  {
    "word": "bar",
    "definitions": [
      "<strong>Dolor</strong> sit igitur.",
      "Lorem ipsum dolor sit amet."
    ]
  },
  {
    "word": "baz",
    "definitions": [
      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
    ]
  },
  {
    "word": "foo2",
    "definitions": [
      "Lorem ipsum dolor sit amet, <i>dolor</i> sit igitur"
    ]
  },
  {
    "word": "bar2",
    "definitions": [
      "<strong>Dolor</strong> sit igitur.",
      "Lorem ipsum dolor sit amet."
    ]
  },
  {
    "word": "baz2",
    "definitions": [
      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
    ]
  }
]
