tests/snapshots/dictionary_tests__gets_dictionary_with_custom_settings.snap
---
source: tests/dictionary_tests.rs
expression: result

---
[
  {
    "word": "foo",
    "definitions": [
      "Lorem ipsum dolor sit amet, <VINO>dolor</VINO> sit igitur"
    ]
  },
  {
    "word": "bar",
    "definitions": [
      "<TUHTI>Dolor</TUHTI> sit igitur.",
      "Lorem ipsum dolor sit amet."
    ]
  },
  {
    "word": "baz",
    "definitions": [
      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
    ]
  },
  {
    "word": "foo2",
    "definitions": [
      "Lorem ipsum dolor sit amet, <VINO>dolor</VINO> sit igitur"
    ]
  },
  {
    "word": "bar2",
    "definitions": [
      "<TUHTI>Dolor</TUHTI> sit igitur.",
      "Lorem ipsum dolor sit amet."
    ]
  },
  {
    "word": "baz2",
    "definitions": [
      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
    ]
  }
]
